--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,9 +1,14 @@
 #box{
+    display: inline-block;
     background-color: #3A4042;
     position: absolute;
-    width: 627px;
-    height: 184px;
     left: 91px;
     top: 196px;
     box-shadow: 10px 10px 0px black;
+    text-align: center;
+    padding: 42px 44px;
+}
+
+#title h1{
+    margin-bottom: 28px;
 }
