--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,12 +1,12 @@
 .box{
-    display: inline-block;
+    display: inline-block; 
     background-color: #3A4042;
-    position: absolute;
+    /* position: absolute;
     left: 91px;
-    top: 196px;
+    top: 196px; */
     box-shadow: 10px 10px 0px black;
     text-align: center;
-    padding: 42px 44px;
+    padding: 42px 44px; 
 }
 
 .title h1{
