--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,11 +1,11 @@
-.title{
+.main-title{
     font-family: 'Press Start 2P', sans-serif;
     color: #FF789E;
     font-size: 40px;
     text-shadow: 4px 4px 0px black;
 }
 
-.title.-second{
+.main-title.-second{
     color: #fff;
     text-shadow: none;
     text-align: center;
