--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,6 +1,6 @@
 .banner{
     box-sizing: border-box;
-    background-image: url(../../assets/img/img1.png);
+    background-image: url(../../assets/img/banner/img1.png);
     background-repeat: no-repeat;
     height: 800px;
     background-size: 100%;
