Change box to main-box

--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -13,15 +13,12 @@
     display: flex;
     flex-direction: column;
     width: 640px;
-   
 }
 
-.main-banner .box{
+.main-banner .main-box{
     margin-bottom: 40px;
- 
 }
 .main-banner .navigation{
     display: flex;
-  
     justify-content: space-around;
 }
