--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -1,4 +1,4 @@
-.box{
+.main-box{
     display: inline-block; 
     background-color: #3A4042;
     /* position: absolute;
@@ -9,6 +9,6 @@
     padding: 42px 44px; 
 }
 
-.title h1{
+.main-box .main-title{
     margin-bottom: 28px;
 }
