Creates the variations to main-section. (main-title -second and main-description)

--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -17,3 +17,11 @@
 .main-section.-bdFirst{
     border-color: #FF789E;
 }
+
+.main-section.-bgSecond{
+    background-color: #7c5e99 ;
+}
+
+.main-section.-bdPurple{
+    border-color: #000;
+}
