--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #BB6CFE;
+    background-color: #CB6CE6;
     box-shadow: 10px 10px 0px #fff;
     width: 280px;
     height: 280px;
@@ -10,5 +10,6 @@
 
 .card-project.-blue{
     background-color: #4c5b84;
-}
+} 
+
 
