--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -2,7 +2,7 @@
     background-color: #FF789E;
     padding-top: 50px;
     padding-bottom: 100px;
-    border-bottom:  10px solid #BB6CFE;
+    border-bottom:  10px solid #CB6CE6;
    
 }
 
@@ -19,7 +19,7 @@
 }
 
 .main-section.-bgSecond{
-    background-color: #7c5e99 ;
+    background-color: #CB6CE6 ;
 }
 
 .main-section.-bdPurple{
