--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #BB6CFE;
+    background-color: #CB6CE6;
     border-bottom: 10px solid #000;
     padding: 10px 20px;
 
