--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -3,5 +3,8 @@
     font-size: 30px;
     font-weight: 300;
     line-height: 1.3;
-
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-top: 50px;
 }
+
